--- a/config.yaml
+++ b/config.yaml
@@ -3,15 +3,15 @@ dbconfig:
   host: "127.0.0.1"
   port: "5432"
   config: "sslmode=disable TimeZone=Asia/Shanghai"
-  db_name: "workspace_db"
-  user: "gpaas"
-  password: "pg@password"
+  db_name: "wk_db"
+  user: "wk_user"
+  password: "520@yan"
   max_idle_connections: 10
   max_open_connections: 100
   conn_max_lifetime: "10m"
 
 oauthconfig:
-  secret_key: "work_space_auth_secret_key"
+  secret_key: "work_space_auth_oauth_secret_key"
   access_expires_time: "8h"
   refresh_expires_time: "168h"
   issuer: "github.com/jackyuan2022"
